--- a/scss/widgets/topic-timeline.scss
+++ b/scss/widgets/topic-timeline.scss
@@ -75,14 +75,15 @@ $container-post-width-xl: map-get(
     button.widget-button.toggle-admin-menu,
     button.widget-button.create,
     button.dropdown-select-box-header {
-      box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.25);
+      align-items: center;
       border-radius: 100%;
+      box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.25);
       display: flex;
       height: 3.125rem;
+      justify-content: center;
       margin: 0 0 0.625rem;
       padding: 0;
       width: 3.125rem;
-      justify-content: center;
     }
 
     button.widget-button.toggle-admin-menu,
