feat(homepage): render button for new topic and category creation

--- a/scss/templates/components/d-navigation.scss
+++ b/scss/templates/components/d-navigation.scss
@@ -50,8 +50,10 @@
       display: none;
     }
   }
+}
 
-  .category-notifications-button > button.dropdown-select-box-header {
+.category-actions {
+  .select-kit.dropdown-select-box .dropdown-select-box-header {
     padding: 0.375rem 0.75rem;
     min-height: 0;
     border-radius: 0.25rem;
