--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -77,6 +77,7 @@ ol.category-breadcrumb .select-kit.combo-box .select-kit-header {
   font-size: 1.5rem;
 }
 
+.navigation-container,
 .dc-navigation-container,
 .category-navigation {
   .category-actions {
