dev: use select kit styles on inputs

--- a/common/common.scss
+++ b/common/common.scss
@@ -11,6 +11,7 @@
 @import "type";
 @import "card";
 @import "pill";
+@import "forms";
 @import "utils";
 
 @import "connectors/categories-nav";
@@ -35,7 +36,6 @@
 @import "widgets/post-controls";
 @import "widgets/post";
 @import "widgets/quick-access-panel";
-@import "widgets/select-kit";
 @import "widgets/topic-timeline";
 @import "widgets/user-menu";
 
