--- a/javascripts/discourse/templates/modal/login.hbs
+++ b/javascripts/discourse/templates/modal/login.hbs
@@ -18,12 +18,10 @@
               <tr>
                 <td><label for="login-account-password">{{i18n "login.password"}}</label></td>
                 <td>{{password-field value=loginPassword type="password" id="login-account-password" maxlength="200" capsLockOn=capsLockOn disabled=disableLoginFields}}</td>
-                <td><a href id="forgot-password-link" {{action "forgotPassword"}}>{{i18n "forgot_password.action"}}</a></td>
+                <td class="forgot-password"><a href id="forgot-password-link" {{action "forgotPassword"}}>{{i18n "forgot_password.action"}}</a></td>
               </tr>
               <tr>
-                <td></td>
                 <td><div class="caps-lock-warning {{unless capsLockOn "hidden"}}">{{d-icon "exclamation-triangle"}} {{i18n "login.caps_lock_warning"}}</div></td>
-                <td></td>
               </tr>
             </tbody>
           </table>
@@ -61,11 +59,11 @@
             icon="unlock"
             label=loginButtonLabel
             disabled=loginDisabled
-            class="btn btn-large btn-primary"}}
+            class="btn btn-primary btn-lg"}}
         {{/unless}}
       {{/if}}
 
-      {{conditional-loading-spinner condition=showSpinner size="small"}}
+      {{conditional-loading-spinner condition=showSpinner size="large"}}
     </div>
 
     {{#if showLoginButtons}}
