--- a/scss/login.scss
+++ b/scss/login.scss
@@ -2,6 +2,12 @@
   margin: 0 auto;
 }
 
+#login-form {
+  td {
+    padding-right: 0;
+  }
+}
+
 .login-modal.in:before {
   content: "";
   height: 100vh;
@@ -39,13 +45,21 @@
     form {
       width: 100%;
     }
+
+    .forgot-password {
+      padding-top: 0.5rem;
+      justify-content: flex-end;
+    }
+
+    #forgot-password-link {
+      float: right;
+    }
   }
 
   .modal-header {
     border-bottom: none;
 
     .title {
-      margin-top: 15px;
       text-align: center;
       width: 100%;
     }
@@ -77,7 +91,9 @@
   // Login button container
   .auth-footer {
     border-top: none;
+    margin-top: 0.5rem;
     padding: 0 24px;
+    position: relative;
     width: 100%;
 
     #login-button {
@@ -86,21 +102,33 @@
       // same value as the .btn class
       min-height: 40px;
     }
+
+    // spinner to appear on top of button
+    .loading-container {
+      align-items: center;
+      bottom: 0;
+      display: flex;
+      justify-content: center;
+      left: 0;
+      pointer-events: none;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
   }
 }
 
 // this is the section with the social buttons
 .auth-social {
   width: 100%;
-  padding-bottom: 2rem;
+  padding-bottom: 1.5rem;
 
   .auth-social-buttons {
     #login-buttons {
-      /*       flex-direction: row;
-      justify-content: space-between; */
-
       &:not(.hidden) {
         button {
+          margin: 0.25rem 0;
+
           &:first-of-type {
             margin-top: 0;
           }
@@ -115,7 +143,7 @@
   .auth-divider {
     width: 100%;
     text-align: center;
-    margin: 2rem 0;
+    margin: 1.5rem 0;
     height: 0px;
 
     hr {
