--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -89,3 +89,40 @@ ol.category-breadcrumb .select-kit.combo-box .select-kit-header {
     width: 100%;
   }
 }
+
+.d-modal.login-modal {
+  .modal-inner-container {
+    max-width: 100vw;
+    padding: 0 1rem;
+    overflow: visible;
+  }
+
+  .auth-footer {
+    padding: 0;
+  }
+
+  // dc-logo is rendered inside the modal
+  // we put it on top of the modal with css
+  .dc-logo {
+    position: absolute;
+    top: -60px; // 50px logo height + 10px padding
+    text-align: center;
+    pointer-events: none;
+
+    img {
+      height: 50px;
+    }
+  }
+
+  #login-buttons:not(.hidden) {
+    flex-direction: column;
+
+    button {
+      flex: 1;
+      max-width: 100%;
+      margin: 0;
+      min-height: 40px;
+      margin-bottom: 0.5rem;
+    }
+  }
+}
