--- a/javascripts/discourse/templates/modal/login.hbs
+++ b/javascripts/discourse/templates/modal/login.hbs
@@ -1,11 +1,7 @@
-<div class="dc-logo">
-  {{mount-widget widget="home-logo" args=args}}
-</div>
-
 {{#login-modal screenX=lastX screenY=lastY loginName=loginName loginPassword=loginPassword secondFactorToken=secondFactorToken action=(action "login")}}
   {{plugin-outlet name="login-before-modal-body" tagName=""}}
 
-  {{#d-modal-body title="login.title" class=modalBodyClasses dismissable=false showCloseButton=true}}
+  {{#d-modal-body title="login.title" class=modalBodyClasses dismissable=false showCloseButton=true showLogo=true}}
     {{#if canLoginLocal}}
       <form id="login-form" method="post">
         <div id="credentials" class={{credentialsClass}}>
