dev(login-modal): add create account link

--- a/javascripts/discourse/templates/modal/login.hbs
+++ b/javascripts/discourse/templates/modal/login.hbs
@@ -2,6 +2,13 @@
   {{plugin-outlet name="login-before-modal-body" tagName=""}}
 
   {{#d-modal-body title="login.title" class=modalBodyClasses dismissable=false showCloseButton=true showLogo=true}}
+    {{#if showSignupLink}}
+      <div>
+        <p>
+          Don't have an account? <a href id="new-account-link" {{action "createAccount"}}>{{i18n "create_account.title"}}</a>
+        </p>
+      </div>
+    {{/if}}
     {{#if canLoginLocal}}
       <form id="login-form" method="post">
         <div id="credentials" class={{credentialsClass}}>
