dev: move create account button below the form

--- a/javascripts/discourse/templates/modal/login.hbs
+++ b/javascripts/discourse/templates/modal/login.hbs
@@ -62,7 +62,7 @@
               icon="unlock"
               label=loginButtonLabel
               disabled=loginDisabled
-              class="btn btn-primary btn-lg"}}
+              class="btn btn-primary btn-lg btn-block"}}
           {{/unless}}
         {{/if}}
 
