--- a/javascripts/discourse/templates/modal/create-account.hbs
+++ b/javascripts/discourse/templates/modal/create-account.hbs
@@ -130,6 +130,21 @@
         </div>
       {{/if}}
 
+      {{#if showCreateForm}}
+        <div class="auth-footer">
+          {{d-button
+            class="btn btn-primary btn-lg btn-block"
+            action=(action "createAccount")
+            disabled=submitDisabled
+            label="create_account.title"
+          }}
+
+          <div class="disclaimer">{{html-safe disclaimerHtml}}</div>
+        </div>
+
+        {{plugin-outlet name="create-account-after-modal-footer" tagName=""}}
+      {{/if}}
+
       {{#unless hasAuthOptions}}
         <div class="auth-social">
           <div class="auth-divider">
@@ -143,22 +158,6 @@
           </div>
         </div>
       {{/unless}}
-
-      {{#if showCreateForm}}
-        <div class="modal-footer">
-          {{d-button
-            class="btn btn-primary btn-lg"
-            action=(action "createAccount")
-            disabled=submitDisabled
-            label="create_account.title"
-          }}
-
-          <div class="disclaimer">{{html-safe disclaimerHtml}}</div>
-        </div>
-
-        {{plugin-outlet name="create-account-after-modal-footer" tagName=""}}
-      {{/if}}
     {{/d-modal-body}}
-
   {{/unless}}
 {{/create-account}}
