feat(homepage): add new category dropdown alongside collectives title

--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -1,6 +1,6 @@
 {{#if currentEfforts}}
   <div class="dc-categories-container">
-    <h2 class="dc-heading">
+    <h2 class="dc-heading mt-4 mb-2">
       {{theme-i18n "dc.categories.currentEfforts.title"}}
     </h2>
     <p>
@@ -17,9 +17,19 @@
 {{/if}}
 {{#if collectives}}
   <div class="dc-categories-container">
-    <h2 class="dc-heading">
-      {{theme-i18n "dc.categories.collectives.title"}}
-    </h2>
+    <div class="d-flex justify-content-between align-items-center mt-4 mb-2">
+      <h2 class="dc-heading m-0">
+        {{theme-i18n "dc.categories.collectives.title"}}
+      </h2>
+      <div class="category-actions">
+        {{#if showCategoryAdmin}}
+          {{categories-admin-dropdown
+            onChange=(action "selectCategoryAdminDropdownAction")
+            options=(hash triggerOnChangeOnTab=false)
+          }}
+        {{/if}}
+      </div>
+    </div>
     <p>
       {{{theme-i18n "dc.categories.collectives.description"}}}
     </p>
@@ -34,7 +44,7 @@
 {{/if}}
 {{#if nonCollectives}}
   <div class="dc-categories-container">
-    <h2 class="dc-heading">
+    <h2 class="dc-heading mt-4 mb-2">
       {{theme-i18n "dc.categories.others.title"}}
     </h2>
     <div class="dc-row">
