--- a/scss/login.scss
+++ b/scss/login.scss
@@ -10,6 +10,7 @@ body.modal-open {
 
 .d-modal.forgot-password-modal,
 .d-modal.create-account,
+.d-modal.create-account-modal,
 .d-modal.login-modal {
   position: absolute;
   top: 0;
@@ -47,10 +48,14 @@ body.modal-open {
       padding: 0 24px;
       max-height: none;
 
-      td {
-        padding: 0;
+      table {
         width: 100%;
-        margin: 0 auto;
+
+        td {
+          padding: 0;
+          width: 100%;
+          margin: 0 auto;
+        }
       }
     }
   }
