fix(topic): make sure all topic-footer btns height are given by padding
re https://app.asana.com/0/1168997577035609/1177710863723164

--- a/scss/templates/topic.scss
+++ b/scss/templates/topic.scss
@@ -29,6 +29,7 @@ nav.post-controls button.bookmark.bookmarked .d-icon,
 .select-kit.dropdown-select-box .dropdown-select-box-header,
 #topic-footer-buttons .btn {
   padding: 0.625rem 0.75rem;
+  height: auto;
   border-radius: 0.625rem;
 }
 
