--- a/javascripts/discourse/templates/components/d-modal.hbs
+++ b/javascripts/discourse/templates/components/d-modal.hbs
@@ -1,16 +1,22 @@
 {{! https://github.com/discourse/discourse/blob/master/app/assets/javascripts/discourse/app/templates/components/d-modal.hbs  }}
 <div class="modal-outer-container">
-  <div class="modal-middle-container {{if showLogo 'modal-middle-container--logo'}}">
+  <div
+    class="modal-middle-container
+      {{if showLogo "modal-middle-container--logo"}}"
+  >
     {{#if showLogo}}
       {{mount-widget widget="home-logo" args=args class="dc-logo"}}
     {{/if}}
-
     <div class="modal-inner-container">
       <div class="modal-header">
         {{#if shouldShowCloseButton}}
-          {{d-button icon="times" action=(route-action "closeModal" "initiatedByCloseButton") class="btn-flat modal-close close" title="modal.close"}}
+          {{d-button
+            icon="times"
+            action=(route-action "closeModal" "initiatedByCloseButton")
+            class="btn-flat modal-close close"
+            title="modal.close"
+          }}
         {{/if}}
-
         {{#if panels}}
           <ul class="modal-tabs">
             {{#each panels as |panel|}}
@@ -18,27 +24,35 @@
                 panel=panel
                 panelsLength=panels.length
                 selectedPanel=selectedPanel
-                onSelectPanel=onSelectPanel}}
+                onSelectPanel=onSelectPanel
+              }}
             {{/each}}
           </ul>
         {{else}}
           <div class="title">
-            <h3>{{title}}</h3>
-
+            <h3>
+              {{title}}
+            </h3>
             {{#if subtitle}}
-              <p>{{subtitle}}</p>
+              <p>
+                {{subtitle}}
+              </p>
             {{/if}}
           </div>
         {{/if}}
       </div>
-
       <div id="modal-alert"></div>
-
       {{yield}}
-
       {{#each errors as |error|}}
         <div class="alert alert-error">
-          <button type="button" class="close" data-dismiss="alert" aria-label={{i18n "modal.dismiss_error"}}>×</button>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="alert"
+            aria-label={{i18n "modal.dismiss_error"}}
+          >
+            ×
+          </button>
           {{error}}
         </div>
       {{/each}}
