refactor(login): reduce forgot password text size

--- a/scss/login.scss
+++ b/scss/login.scss
@@ -161,6 +161,7 @@ body.modal-open {
 
         #forgot-password-link {
           float: right;
+          font-size: $font-size-sm;
         }
       }
     }
