refactor(modal): unify login and create account form
the idea is that form within the session flow keep the same pattern thus the styles will apply for
core components and custom ones

--- a/javascripts/discourse/templates/modal/login.hbs
+++ b/javascripts/discourse/templates/modal/login.hbs
@@ -30,8 +30,8 @@
         <div id="credentials" class={{credentialsClass}}>
           <table>
             <tbody>
-              <tr>
-                <td>
+              <tr class="input">
+                <td class="label">
                   <label for="login-account-name">
                     {{i18n "login.username"}}
                   </label>
@@ -48,8 +48,8 @@
                   }}
                 </td>
               </tr>
-              <tr>
-                <td>
+              <tr class="input">
+                <td class="label">
                   <label for="login-account-password">
                     {{i18n "login.password"}}
                   </label>
