--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -103,7 +103,7 @@ ol.category-breadcrumb .select-kit.combo-box .select-kit-header {
   .have-an-account,
   .auth-footer,
   .auth-social {
-    padding: 0 0.5rem;
+    padding: 0;
   }
 
   #login-buttons:not(.hidden) {
