feat(post): moderator post have a different card background
by default Discourse change the content only which for our theme looks odd. This commit apply change
background to apply to the whole post card. https://cln.sh/QDN5x6

re https://app.asana.com/0/1168997577035609/1177708595506649

--- a/scss/widgets/post.scss
+++ b/scss/widgets/post.scss
@@ -51,6 +51,17 @@
   }
 }
 
+.topic-post.moderator {
+  article {
+    background-color: dark-light-choose($highlight-low, $highlight-medium);
+  }
+
+  .regular > .cooked {
+    padding: 0;
+    background: none;
+  }
+}
+
 // Make extra emphasis to overcome guest styles
 .dc-topic-post.dc-topic-post {
   $padding-top: $spacer * 1.25;
