fix(cta-signup): make it fluid to the topic stream
https://cln.sh/GnvYTd

--- a/common/common.scss
+++ b/common/common.scss
@@ -18,6 +18,7 @@
 @import "connectors/hero";
 
 @import "templates/components/categories-only";
+@import "templates/components/cta-signup";
 @import "templates/components/d-navigation";
 @import "templates/components/dc-show-more";
 @import "templates/components/list-controls";
