refactor(category-card): change icon to represent amount of topics
avoid to use the same icon for amount of topics and amount of replies
https://cln.sh/jsxMdj

fix https://app.asana.com/0/1168997577035609/1177393609854433

--- a/javascripts/discourse/templates/components/dc-category-card.hbs
+++ b/javascripts/discourse/templates/components/dc-category-card.hbs
@@ -15,7 +15,7 @@
   </div>
   <div class="dc-card__meta">
     <span class="material-icons">
-      comment
+      forum
     </span>
     <p class="m-0 ml-1 dc-text-light">
       {{category.totalTopicCount}}
