feat(header): apply base styles for header links

--- a/common/common.scss
+++ b/common/common.scss
@@ -13,6 +13,7 @@
 @import "pill";
 @import "forms";
 @import "utils";
+@import "nav";
 
 @import "connectors/categories-nav";
 @import "connectors/hero";
