--- a/scss/connectors/categories-nav.scss
+++ b/scss/connectors/categories-nav.scss
@@ -60,15 +60,8 @@ $dc-categories-height: 4rem;
     margin: 0 auto;
   }
 
-  a,
-  a:visited,
-  a:active {
-    transition: color ease 0.216s;
-    color: $body-color;
-  }
-
-  a:hover {
-    color: $primary;
+  a {
+    @extend %navigation-link;
   }
 
   > * {
