refactor(layout): use variable for background gradient

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,6 +1,5 @@
 body {
-  // Usage of variables yield error on SCSS compiler
-  background: linear-gradient(180deg, #dbf8ff 0%, #fcfbf7 88.74%);
+  background: $background-gradient;
 
   // Up to some extend #main is the actual "body" of the page
   &,
