feat(type): add util for text xs

--- a/scss/type.scss
+++ b/scss/type.scss
@@ -33,6 +33,10 @@ body {
   font-size: $font-size-sm;
 }
 
+.dc-text-xs {
+  font-size: $font-size-xs;
+}
+
 .dc-inline-icons {
   $icon-correction: 2px;
   font-size: $font-size-base;
